--- a/netlify.toml
+++ b/netlify.toml
@@ -8,7 +8,7 @@ LANDING_BUTTON = "Cyber Blog"
 # (Optional) Site description on landing page
 LANDING_DESCRIPTION = "My journey to a Cyber career"
 # (REQUIRED) The Markdown page linked to landing page button (e.g. put home for ./home.md)
-LANDING_PAGE = "home"
+LANDING_PAGE = "index.md"
 # (Optional) Site title on landing page
 LANDING_TITLE = "My Cyber Blog"
 PYTHON_VERSION = "3.8"
