--- a/netlify.toml
+++ b/netlify.toml
@@ -4,18 +4,18 @@ publish = "public"
 
 [build.environment]
 # (Optional) Text in landing page button
-LANDING_BUTTON = "Cyber Blog"
+LANDING_BUTTON = "Enter"
 # (Optional) Site description on landing page
-LANDING_DESCRIPTION = "My journey to a Cyber career"
+LANDING_DESCRIPTION = "My tech documentation and note-taking"
 # (REQUIRED) The Markdown page linked to landing page button (e.g. put home for ./home.md)
-LANDING_PAGE = "./content/Home"
+LANDING_PAGE = "./Home"
 # (Optional) Site title on landing page
-LANDING_TITLE = "My Cyber Blog"
+LANDING_TITLE = "KODriscoll Notes"
 PYTHON_VERSION = "3.8"
 # (REQUIRED) Site repo URL
 REPO_URL = "https://github.com/KieranODriscoll/blog"
 # (Optional) Site title in navbar
-SITE_TITLE = "KODriscoll Cyber Blog"
+SITE_TITLE = "KODriscoll Notes"
 # (Optional) Site title in browser tab (leave blank to use SITE_TITLE)
 SITE_TITLE_TAB = ""
 # (REQUIRED) Netlify site URL
